# data-masker

./: .gitignore  BUG_FIX_REPORT.md  CHANGELOG.md  E2E_TEST_GUIDE.md  E2E_TEST_README.md  QUICK_START.md  README.md  SECURITY_FIX_SUMMARY.md  SECURITY_HARDENING_GUIDE.md  SECURITY_TEST_GUIDE.md  TAURI_TEST_GUIDE.md  TEST_GUIDE.md  index.html  package-lock.json  package.json  playwright.config.js  run-e2e-tests.sh  verify-report.json  verify-security-fixes.sh  vite.config.js  vitest.config.js
.github/workflows/: build.yml
coverage/: coverage-final.json  index.html
coverage/stores/: files.js.html  index.html  result.js.html  rules.js.html  settings.js.html
coverage/utils/: errorHandler.js.html  index.html  regexValidator.js.html  secureStorage.js.html
src/: App.vue  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  file.rs  ip_mapping.rs  mask.rs  mod.rs  preview.rs  rule.rs  settings.rs
src-tauri/src/models/: config.rs  mod.rs  result.rs  rule.rs
src-tauri/src/services/: crypto.rs  detector.rs  ip_mapper.rs  logger.rs  masker.rs  mod.rs
src-tauri/src/services/parser/: excel.rs  mod.rs  pdf.rs  text.rs  word.rs
src-tauri/src/utils/: mod.rs  validators.rs
src/components/: FileUploader.vue  ProgressBar.vue  RuleCard.vue
src/router/: index.js
src/stores/: files.js  result.js  rules.js  settings.js
src/styles/: main.css
src/utils/: errorHandler.js  errorReporter.js  format.js  highlight.js  logCollector.js  regexValidator.js  secureStorage.js  tauri.js
src/views/: FileSelect.vue  Home.vue  IPMapping.vue  Preview.vue  Processing.vue  Result.vue  RuleConfig.vue  (+1 more)
(+23 files in other folders)
