# 产品设计: wonder-宏
# 架构设计/开发实现: JARVIS AI Assistant
# 
# 核心特性:
# - 本地处理，零上传（解决云端泄露痛点）
# - 格式无损保持（解决格式破坏痛点）
# - 预览确认机制（解决无预览痛点）
# - 自定义规则系统（解决规则固化痛点）

[package]
name = "data-masker"
version = "1.0.0"
description = "文件脱敏工具 - 本地桌面应用，敏感数据不上传云端"
authors = ["wonder-宏", "JARVIS AI Assistant"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde", "clock", "std"] }
uuid = { version = "1.7", features = ["v4"] }
sha2 = "0.10"
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
sysinfo = "0.30"
walkdir = "2.4"
zip = "0.6"
quick-xml = "0.31"
lol_html = "1.2"
calamine = "0.22"
umya-spreadsheet = "0.9"
pdf-extract = "0.7"
lopdf = "0.32"
lru = "0.12"
once_cell = "1.19"
encoding_rs = "0.8"
ctrlc = "3.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "combaseapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
